--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "jest": "^24.8.0",
     "jest-raw-loader": "^1.0.1",
     "latest-semver": "^2.0.0",
+    "markdown-it-for-inline": "^0.1.1",
     "markdown-it-include": "^1.1.0",
-    "markdown-it-replacements": "^1.0.1",
     "node-sass": "^4.12.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
